# nasfmt

./: Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
docs/: coverage.sh
examples/: board.s  main.s  util.s
src/: ast.rs  formatter.rs  main.rs  parser.rs
src/formatter/: block.rs  comment.rs  line.rs  mod.rs  operand.rs  util.rs
test/: examples_integration.rs
tests/: integration.rs
tests/resources/: hello.s  memory.s
