[package]
name = "nasfmt"
version = "0.1.0"
edition = "2024"
description = "Code formatter for NASM x86-64 assembly"
license = "MIT"
repository = "https://github.com/benmandrew/nasfmt"
readme = "README.md"
keywords = ["nasm", "assembly", "formatter", "x86-64"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.95"

[dependencies]
clap = { version = "4", features = ["derive"] }
similar = "2"
colored = "2"

[dev-dependencies]
tempfile = "3"
